# woasobi

./: .gitignore  CLAUDE.md  PLAN.en.md  PLAN.md  README.md  README.zh-CN.md  start_dev.sh
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  index.css
client/src-api/: package.json  pnpm-lock.yaml
client/src-api/scripts/: e2e-codex-slash.ts
client/src-api/src/: index.ts
client/src-api/src/agents/: claude.ts  codex.ts  types.ts
client/src-api/src/routes/: agent.ts  health.ts  projects.ts  terminal.ts  threads.ts
client/src-api/src/storage/: discover.ts  index.ts  sessions.ts
client/src-api/src/utils/: sse.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  SlashCommandDropdown.tsx
client/src/components/layout/: AppLayout.tsx  StatusBar.tsx
client/src/components/preview/: ArtifactTab.tsx  CodeChangesTab.tsx  FilesTab.tsx  ImageTab.tsx  PreviewPanel.tsx  TerminalTab.tsx
client/src/components/settings/: SettingsDialog.tsx
client/src/components/sidebar/: ProjectGroup.tsx  SecondaryPanel.tsx  (+3 more)
client/src/config/: api.ts  commands.ts  models.ts
client/src/lib/: claudeSlash.ts  codexSlash.ts
client/src/mocks/: file-tree.ts  git-changes.ts  index.ts  messages.ts  models.ts  skills.ts  threads.ts  tools.ts  workspaces.ts
client/src/stores/: chat.ts  index.ts  preview.ts  projects.ts  settings.ts  ui.ts
client/src/types/: index.ts
(+10 files in other folders)
